# Challenge30

./: CMakeLists.txt  README.md  achievementswindow.cpp  achievementswindow.h  achievementswindow.ui  addquestiondialog.cpp  addquestiondialog.h  addquestiondialog.ui  challengewindow.cpp  challengewindow.h  challengewindow.ui  dashboardwindow.cpp  dashboardwindow.h  dashboardwindow.ui  databasemanager.cpp  databasemanager.h  historywindow.cpp  historywindow.h  historywindow.ui  leaderboardwindow.cpp  leaderboardwindow.h  leaderboardwindow.ui  main.cpp  mainwindo.cpp  mainwindo.h  mainwindo.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  questionmanagerwindow.cpp  questionmanagerwindow.h  questionmanagerwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  resources.qrc  resultdialog.cpp  resultdialog.h  resultdialog.ui  soundmanager.cpp  (+11 more)
